[tool.poetry]
name = "near-earth-objects"
version = "0.1.0"
description = ""
authors = ["Matěj Dvořáček <mates.dvoracek@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
